--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,1 +1,8 @@
-<p>messages works!</p>
+<div class="container">
+  <div class="header">
+    <h3>Messages</h3>
+    <button mat-mini-fab color="primary" (click)="openDialog()">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
+</div>
