--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,8 +1,61 @@
 <div class="container">
   <div class="header">
-    <h3>Messages</h3>
+    <h2>Messages</h2>
     <button mat-mini-fab color="primary" (click)="openDialog()">
       <mat-icon>add</mat-icon>
     </button>
+  </div>
+
+  <div class="content">
+    <table
+      *ngIf="messages$ | async as messages"
+      mat-table
+      [dataSource]="messages"
+      class="mat-elevation-z8"
+    >
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element?.name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="message">
+        <th mat-header-cell *matHeaderCellDef>Message</th>
+        <td mat-cell *matCellDef="let element">
+          {{
+            element?.message?.length > 100
+              ? (element.message | slice : 0 : 100)
+              : element?.message
+          }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Date</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.date | date : "dd/MM/yyyy hh:mm aa" }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <div
+      *ngIf="isLoading$ | async"
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: white;
+      "
+    >
+      <mat-progress-spinner color="primary" mode="indeterminate">
+      </mat-progress-spinner>
+    </div>
   </div>
 </div>
