--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,3 @@
-.navbar {
-    width: 100%;
-    display: flex;
-    column-gap: 20px;
-    list-style-type: none;
-    margin: 0;
-    padding: 20px;
-}
-
-.navbar-item {
-    cursor: pointer;
-    font-size: 20px;
-    padding: 10px 20px;
-    border-radius: 5px;
-}
-
-.active-link {
-    background-color: pink;
+.spacer {
+    flex: 1 1 auto;
 }
