--- a/src/app/messages/messages-dialog/messages-dialog.component.html
+++ b/src/app/messages/messages-dialog/messages-dialog.component.html
@@ -23,6 +23,6 @@
 </div>
 <div mat-dialog-actions class="dialog-actions">
   <button mat-button color="primary" (click)="closeDialog()" cdkFocusInitial>
-    Add Doc
+    Add Message
   </button>
 </div>
